[workspace]
members = [
    "src/l",
    "src/gc",
    "src/cli",
    "src/queries",
    "src/traits",
    "src/meta",
    "src/infer",
    "src/macros",
    "src/ds",
    "src/ldriver",
    "src/span",
    "src/lex",
    "src/parse",
    "src/ast",
    "src/lcore",
    "src/lutil",
    "src/ir",
    "src/arena",
    "src/error",
    "src/index",
    "src/session",
    "src/resolve",
    "src/astlowering",
    "src/typeck",
    "src/tir",
    "src/mir",
    "src/mirgen",
    "src/codegen",
    "tests/runner",
]

[profile.dev]
opt-level = 0
debug = true
