[workspace]
resolver = "2"
members = [
    "src/l",
    "src/lc-ast",
    "src/lc-astlowering",
    "src/lc-cli",
    "src/lc-codegen",
    "src/lc-core",
    "src/lc-driver",
    "src/lc-ds",
    "src/lc-error",
    "src/lc-expand",
    "src/lc-gc",
    "src/lc-index",
    "src/lc-infer",
    "src/lc-ir",
    "src/lc-lex",
    "src/lc-macros",
    "src/lc-meta",
    "src/lc-mir",
    "src/lc-mirgen",
    "src/lc-parse",
    "src/lc-queries",
    "src/lc-resolve",
    "src/lc-session",
    "src/lc-span",
    "src/lc-tir",
    "src/lc-traits",
    "src/lc-typeck",
    "src/lc-util",
    "tests/runner",
]

