[package]
name = "ast_lowering"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
resolve = { path = "../resolve" }
ir = { path = "../ir" }
ast = { path = "../ast" }
arena = { path = "../arena" }
span = { path = "../span" }
index = { path = "../index" }
itertools = "0.9"
rustc-hash = "1"

