[package]
name = "codegen"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
ast = { path = "../ast" }
error = { path = "../error" }
ir = { path = "../ir" }
span = { path = "../span" }
index = { path = "../index" }
lcore = { path = "../lcore" }
maplit = "1"
log = "0.4.11"
rustc-hash = "1"
thiserror = "1"
itertools = "0.9"
llvm-sys = "100"

[dependencies.inkwell]
git = "https://github.com/andyyu2004/inkwell"
branch = "llvm10-0"
features = ["experimental"]

[dev-dependencies]
ldriver = { path = "../ldriver" }
