[package]
name = "ir"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index = { path = "../index" }
ast = { path = "../ast" }
span = { path = "../span" }
util = { path = "../util" }
rustc-hash = "1"
