[package]
name = "lc-codegen"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
lc-ast = { path = "../lc-ast" }
lc-error = { path = "../lc-error" }
lc-ir = { path = "../lc-ir" }
lc-span = { path = "../lc-span" }
lc-index = { path = "../lc-index" }
lc-core = { path = "../lc-core" }
maplit = "1"
log = "0.4.11"
rustc-hash = "1"
thiserror = "1"
itertools = "0.9"
llvm-sys = "150"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0-prefer-dynamic"] }

[dev-dependencies]
lc-driver = { path = "../lc-driver" }
