[package]
name = "lc-driver"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
lc-ast = { path = "../lc-ast" }
lc-astlowering = { path = "../lc-astlowering" }
lc-codegen = { path = "../lc-codegen" }
lc-core = { path = "../lc-core" }
lc-error = { path = "../lc-error" }
lc-expand = { path = "../lc-expand" }
lc-index = { path = "../lc-index" }
lc-ir = { path = "../lc-ir" }
lc-lex = { path = "../lc-lex" }
lc-meta = { path = "../lc-meta" }
lc-mir = { path = "../lc-mir" }
lc-mirgen = { path = "../lc-mirgen" }
lc-parse = { path = "../lc-parse" }
lc-resolve = { path = "../lc-resolve" }
lc-session = { path = "../lc-session" }
lc-span = { path = "../lc-span" }
lc-tir = { path = "../lc-tir" }
lc-typeck = { path = "../lc-typeck" }
lc-util = { path = "../lc-util" }
serde = "1"
serde_derive = "1"
clap = { version = "3.0.0-beta.1", features=["yaml"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
codespan-reporting = "0.9.5"
termcolor = "1.1.0"
colour = "0.5"
toml = "0.5.7"
log = "0.4.11"
lazy_static = "1"
semver = { version = "0.11.0", features=["serde"] }
simple-logging = "2.0.2"

tempfile = "3"
