[package]
name = "lc-error"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
lc-span = { path = "../lc-span" }
lc-util = { path = "../lc-util" }
codespan = "0.9.5"
codespan-reporting = "0.9.5"
termcolor = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
