[package]
name = "lc-mir"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
lc-span = { path = "../lc-span" }
lc-ds = { path = "../lc-ds" }
lc-core = { path = "../lc-core" }
lc-ast = { path = "../lc-ast" }
lc-index = { path = "../lc-index" }
lc-error = { path = "../lc-error" }
lc-ir = { path = "../lc-ir" }
thiserror = "1"
rustc-hash = "1"
smallvec = "1"
itertools = "0.9"
log = "0.4.11"

[dev-dependencies]
lc-driver = { path = "../lc-driver" }
