[package]
name = "lc-resolve"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
lc-ast = { path = "../lc-ast" }
lc-arena = { path = "../lc-arena" }
lc-error = { path = "../lc-error" }
lc-index = { path = "../lc-index" }
lc-ir = { path = "../lc-ir" }
lc-lex = { path = "../lc-lex" }
lc-meta = { path = "../lc-meta" }
lc-session = { path = "../lc-session" }
lc-span = { path = "../lc-span" }
lc-util = { path = "../lc-util" }
thiserror = "1"
rustc-hash = "1"
log = "0.4.11"
typed-arena = "2.0.2"

[dev-dependencies]
lc-driver = { path = "../lc-driver" }
