[package]
name = "lc-span"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
lc-arena = { path = "../lc-arena" }
lc-macros = { path = "../lc-macros" }
lc-index = { path = "../lc-index" }
rustc-hash = "1.1.0"
codespan = { version = "0.9.5", features = ["serialization"]}
codespan-reporting = "0.9.5"
serde = { version = "1", features = ["derive"] }
