[package]
name = "lc-typeck"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
lc-span = { path = "../lc-span" }
lc-ir = { path = "../lc-ir" }
lc-index = { path = "../lc-index" }
lc-core = { path = "../lc-core" }
lc-ast = { path = "../lc-ast" }
lc-error = { path = "../lc-error" }
lc-infer = { path = "../lc-infer" }
lc-util = { path = "../lc-util" }
rustc-hash = "1"
thiserror = "1"
itertools = "0.9"
bimap = "0.5.2"
log = "0.4.11"

[dev-dependencies]
lc-driver = { path = "../lc-driver" }
