[package]
name = "lcore"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
arena = { path = "../arena" }
resolve = { path = "../resolve" }
ir = { path = "../ir" }
ast = { path = "../ast" }
span = { path = "../span" }
index = { path = "../index" }
session = { path = "../session" }
error = { path = "../error" }
util = { path = "../util" }
smallvec = "1.4.2"
itertools = "0.9"
rustc-hash = "1"
thiserror = "1"
bitflags = "1.2.1"
