[package]
name = "lcore"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
arena = { path = "../arena" }
ir = { path = "../ir" }
ast = { path = "../ast" }
ds = { path = "../ds" }
span = { path = "../span" }
index = { path = "../index" }
session = { path = "../session" }
error = { path = "../error" }
macros = { path = "../macros" }
util = { path = "../util" }
smallvec = "1.4.2"
log = "0.4.11"
itertools = "0.9"
rustc-hash = "1"
thiserror = "1"
ena = "0.14"
serde = "1"
serde_derive = "1"
bitflags = "1.2.1"
