[package]
name = "ldriver"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
span = { path = "../span" }
lex = { path = "../lex" }
parse = { path = "../parse" }
ast = { path = "../ast" }
ir = { path = "../ir" }
tir = { path = "../tir" }
mir = { path = "../mir" }
lcore = { path = "../lcore" }
llvm = { path = "../llvm" }
ast_lowering = { path = "../ast_lowering" }
session = { path = "../session" }
error = { path = "../error" }
typeck = { path = "../typeck" }
resolve = { path = "../resolve" }
clap = { version = "3.0.0-beta.1", features=["yaml"] }
inkwell = { git = "https://github.com/andyyu2004/inkwell", branch = "llvm10-0" }
colour = "0.5"
log = "0.4.11"
simple-logging = "2.0.2"
