[package]
name = "ldriver"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
span = { path = "../span" }
lex = { path = "../lex" }
parse = { path = "../parse" }
index = { path = "../index" }
ast = { path = "../ast" }
ir = { path = "../ir" }
tir = { path = "../tir" }
mir = { path = "../mir" }
mirgen = { path = "../mirgen" }
meta = { path = "../meta" }
lcore = { path = "../lcore" }
astlowering = { path = "../astlowering" }
codegen = { path = "../codegen" }
session = { path = "../session" }
error = { path = "../error" }
typeck = { path = "../typeck" }
resolve = { path = "../resolve" }
util = { path = "../util" }
serde = "1"
serde_derive = "1"
clap = { version = "3.0.0-beta.1", features=["yaml"] }
inkwell = { git = "https://github.com/andyyu2004/inkwell", branch = "llvm10-0" }
codespan-reporting = "0.9.5"
termcolor = "1.1.0"
colour = "0.5"
toml = "0.5.7"
log = "0.4.11"
lazy_static = "1"
semver = { version = "0.11.0", features=["serde"] }
simple-logging = "2.0.2"
