[package]
name = "llvm"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
ast = { path = "../ast" }
error = { path = "../error" }
ir = { path = "../ir" }
mir = { path = "../mir" }
span = { path = "../span" }
index = { path = "../index" }
lcore = { path = "../lcore" }
typeck = { path = "../typeck" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
rustc-hash = "1"
itertools = "0.9"
thiserror = "1"
