[package]
name = "mir"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
span = { path = "../span" }
ds = { path = "../ds" }
lcore = { path = "../lcore" }
ast = { path = "../ast" }
index = { path = "../index" }
error = { path = "../error" }
ir = { path = "../ir" }
thiserror = "1"
rustc-hash = "1"
smallvec = "1"
itertools = "0.9"
log = "0.4.11"

[dev-dependencies]
ldriver = { path = "../ldriver" }
