[package]
name = "mirgen"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
arena = { path = "../arena" }
span = { path = "../span" }
ds = { path = "../ds" }
lcore = { path = "../lcore" }
ast = { path = "../ast" }
index = { path = "../index" }
infer = { path = "../infer" }
error = { path = "../error" }
mir = { path = "../mir" }
ir = { path = "../ir" }
tir = { path = "../tir" }
typeck = { path = "../typeck" }
util = { path = "../util" }
thiserror = "1"
rustc-hash = "1"
smallvec = "1"
itertools = "0.9"
log = "0.4.11"
