[package]
name = "parse"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
index = { path = "../index" }
span = { path = "../span" }
lex = { path = "../lex" }
ast = { path = "../ast" }
session = { path = "../session" }
error = { path = "../error" }
thiserror = "1"
log = "0.4.11"
codespan = "0.9.5"
rustc-hash = "1"

[dev-dependencies]
ldriver = { path = "../ldriver" }
