[package]
name = "resolve"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
span = { path = "../span" }
lex = { path = "../lex" }
ast = { path = "../ast" }
session = { path = "../session" }
meta = { path = "../meta" }
index = { path = "../index" }
error = { path = "../error" }
arena = { path = "../arena" }
ir = { path = "../ir" }
thiserror = "1"
rustc-hash = "1"
log = "0.4.11"

[dev-dependencies]
ldriver = { path = "../ldriver" }
